[package]
name = "pg_escape"
version = "0.1.0"
edition = "2021"
description = "A Rust library to escape Postgres flavoured SQL"
authors = ["Raminder Singh"]
documentation = "https://docs.rs/pg_escape/"
repository = "https://github.com/imor/pg_escape"
license = "MIT OR Apache-2.0"
keywords = ["Postgres", "SQL", "SQL Injection"]

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
